Fix import of stylesheets and loading of images
Fixed the import of the stylesheets. Now the screen is styled according to the stylesheet. The import of the font does not work at the moment. Also, the screen is too big to be displayed correctly if content of screens is scaled by 125% (default setting on Windows, can be set to 100%). Images are now loading correctly.

--- a/client/src/main/resources/client/stylesheets/basic-question-style.css
+++ b/client/src/main/resources/client/stylesheets/basic-question-style.css
@@ -3,10 +3,10 @@
     This file is for the styling of the basic question type.
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Karla&display=swap'); */
 
 .text {
-    -fx-font-family: Karla;
+    /* -fx-font-family: Karla; TODO: find a way to import the font, does not work right now*/
     -fx-text-color: #252422;
     -fx-font-style: italic;
 }
